--- a/portfolio.html
+++ b/portfolio.html
@@ -13,35 +13,35 @@
 </head>
 <body>
 <header class="header">
-    <div class="header-container container">
-        <nav class="header-nav"> 
-            <a class="logo link" href="./index.html" lang="en">
-                <span class="accent">Web</span><span class="text">Studio</span>
+    <div class="container header__container">
+        <nav class="header-nav">
+            <a class="logo" href="./index.html" lang="en">
+                <span class="logo__accent">Web</span><span class="logo__text">Studio</span>
             </a>
-            <ul class="site-nav list">
-                <li class="site-nav-item"> 
-                    <a class="site-nav-link link" href="./index.html">Студія</a>
+            <ul class="site-nav">
+                <li class="site-nav__item">
+                    <a class="site-nav__link" href="./index.html">Студія</a>
                 </li>
-                <li class="site-nav-item">
-                    <a class="site-nav-link link current" href="./portfolio.html">Портфоліо</a>
+                <li class="site-nav__item">
+                    <a class="site-nav__link current" href="./portfolio.html">Портфоліо</a>
                 </li>
-                <li class="site-nav-item">
-                    <a class="site-nav-link link" href="#">Контакти</a>
+                <li class="site-nav__item">
+                    <a class="site-nav__link" href="#">Контакти</a>
                 </li>
             </ul>
         </nav>
-        <ul class="contacts list">
-            <li class="contacts-item">
-                <a class="contacts-link link" href="mailto:info@devstudio.com">
-                    <svg class="contacts-icon icon" width="16" height="12">
+        <ul class="contacts">
+            <li class="contacts__item">
+                <a class="contacts__link" href="mailto:info@devstudio.com">
+                    <svg class="contacts__icon" width="16" height="12">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
                     info@devstudio.com
                 </a>
             </li>
-            <li class="contacts-item">
-                <a class="contacts-link link" href="tel:+380961111111">
-                    <svg class="contacts-icon icon" width="10" height="16">
+            <li class="contacts__item">
+                <a class="contacts__link" href="tel:+380961111111">
+                    <svg class="contacts__icon" width="10" height="16">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11
@@ -202,55 +202,56 @@
 </main>   
 
 <footer class="footer">
-    <div class="container">
+    <div class="container footer__container">
 
-        <div class="footer-nav">
-            <a href="./index.html" class="footer-logo logo link" lang="en">
-                <span class="accent">Web</span><span class="text">Studio</span>
+        <div class="footer__nav">
+            <a href="./index.html" class="logo footer__logo " lang="en">
+                <span class="logo__accent">Web</span><span class="logo__text logo__text--light">Studio</span>
             </a>
+
             <address>
-                <ul class="address list">
-                    <li class="address-list-item">
-                        <a class="fact link" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank"
+                <ul class="address-list">
+                    <li class="address-list__item">
+                        <a class="address-list__link-fact" href="https://goo.gl/maps/kG6ZxLyjDZMwMeht5" target="_blank"
                             rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="address-list__item">
+                        <a class="address-list__link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="address-list-item">
-                        <a class="tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <li class="address-list__item">
+                        <a class="address-list__link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
         </div>
 
-        <div class="footer-social-networks">
-            <p class="title">Приєднуйтесь</p>
-            <ul class="social-networks list">
-                <li class="social-networks-item">
-                    <a class="social-network-link" href="#instagram">
-                        <svg class="social-network-icon" width="20" height="20">
+        <div class="footer__social-networks">
+            <p class="footer__title">Приєднуйтесь</p>
+            <ul class="social-networks">
+                <li class="social-networks__item">
+                    <a class="social-network__link social-network__link--accent" href="#instagram">
+                        <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-networks-item">
-                    <a class="social-network-link" href="#twitter">
-                        <svg class="social-network-icon" width="20" height="20">
+                <li class="social-networks__item">
+                    <a class="social-network__link social-network__link--accent" href="#twitter">
+                        <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-networks-item">
-                    <a class="social-network-link" href="#facebook">
-                        <svg class="social-network-icon" width="20" height="20">
+                <li class="social-networks__item">
+                    <a class="social-network__link social-network__link--accent" href="#facebook">
+                        <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="social-networks-item">
-                    <a class="social-network-link" href="#linkedin">
-                        <svg class="social-network-icon" width="20" height="20">
+                <li class="social-networks__item">
+                    <a class="social-network__link social-network__link--accent" href="#linkedin">
+                        <svg class="social-network__icon" width="20" height="20">
                             <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -258,21 +259,22 @@
             </ul>
         </div>
 
-        <form action="footer-form">
-            <p class="footer-form-title">Підпишіться на розсилку</p>
-            <div class="footer-form-container">
+        <form action="submit-form">
+            <p class="submit-form__title footer__title">Підпишіться на розсилку</p>
+            <div class="submit-form__container">
                 <label>
-                    <input class="footer-form-input" type="email" name="email" placeholder="E-mail" />
+                    <input class="submit-form__input" type="email" name="email" placeholder="E-mail" />
                 </label>
-                <button class="footer-form-btn" type="submit">
+                <button class="button submit-form__button" type="submit">
                     Підписатися
-                    <svg class="btn-icon" width="24" height="24">
+                    <svg class="submit-form__icon" width="24" height="24">
                         <use href="./images/icons.svg#icon-send"></use>
                     </svg>
                 </button>
             </div>
         </form>
-        
+
+
     </div>
 </footer>
 
