--- a/portfolio.html
+++ b/portfolio.html
@@ -52,147 +52,149 @@
 </header>
 
 <main>
-<section class="portfolio section">
+<section class="portfolio">
     <div class="container">
         <h1 class="visually-hidden">Портфоліо</h1>
-        <ul class="buttons list">
-            <li class="port-btn-list-item">
-                <button class="port-btn button-all" type="button">Все</button>
+
+        <ul class="buttons-list">
+            <li class="buttons-list__item">
+                <button class="buttons-list__button buttons-list__button--btn-all" type="button">Все</button>
             </li>
-            <li class="port-btn-list-item">
-                <button class="port-btn button-veb" type="button">Веб-сайти</button>
+            <li class="buttons-list__item">
+                <button class="buttons-list__button buttons-list__button--btn-veb" type="button">Веб-сайти</button>
             </li>
-            <li class="port-btn-list-item">
-                <button class="port-btn button-app" type="button">Додатки</button>
+            <li class="buttons-list__item">
+                <button class="buttons-list__button buttons-list__button--btn-app" type="button">Додатки</button>
             </li>
-            <li class="port-btn-list-item">
-                <button class="port-btn button-des" type="button">Дизайн</button>
+            <li class="buttons-list__item">
+                <button class="buttons-list__button buttons-list__button--btn-des" type="button">Дизайн</button>
             </li>
-            <li class="port-btn-list-item">
-                <button class="port-btn button-mar" type="button">Маркетинг</button>
+            <li class="buttons-list__item">
+                <button class="buttons-list__button buttons-list__button--btn-mar" type="button">Маркетинг</button>
             </li>
         </ul>
-        <ul class="example-list list">
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+
+        <ul class="example-list">
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.1.jpg" alt="Веб-сайт Технокряк " width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Технокряк</h2>
-                        <p class="lists">Веб-сайт</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Технокряк</h2>
+                        <p class="product-card__point">Веб-сайт</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.2.jpg" alt="Дизайн постера" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
-                        <p class="lists">Дизайн</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Постер<span lang="en"> New Orlean vs Golden Star</span></h2>
+                        <p class="product-card__point">Дизайн</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.3.jpg" alt="Додаток Seafood" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Ресторан<span lang="en"> Seafood</h2>
-                        <p class="lists">Додаток</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Ресторан<span lang="en"> Seafood</h2>
+                        <p class="product-card__point">Додаток</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.4.jpg" alt="Маркетинг Проект Prime" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Проєкт <span lang="en">Prime</span></h2>
-                        <p class="lists">Маркетинг</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Проєкт <span lang="en">Prime</span></h2>
+                        <p class="product-card__point">Маркетинг</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.5.jpg" alt="Додаток Boxes" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Проєкт <span lang="en">Boxes</span></h2>
-                        <p class="lists">Додаток</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Проєкт <span lang="en">Boxes</span></h2>
+                        <p class="product-card__point">Додаток</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-                        <p class="lists">Веб-сайт</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title" lang="en">Inspiration has no Borders</h2>
+                        <p class="product-card__point">Веб-сайт</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.7.jpg" alt="Дизайн видання Limited Edition" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                   <div class="port-wrapper">
-                    <h2 class="subtitle">Видання<span lang="en"> Limited Edition</span></h2>
-                    <p class="lists">Дизайн</p>
+                   <div class="product-card__container">
+                    <h2 class="product-card__title">Видання<span lang="en"> Limited Edition</span></h2>
+                    <p class="product-card__point">Дизайн</p>
                    </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.8.jpg" alt="Маркетинг проєкта LAB" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle">Проєкт<span lang="en"> LAB</span></h2>
-                        <p class="lists">Маркетинг</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title">Проєкт<span lang="en"> LAB</span></h2>
+                        <p class="product-card__point">Маркетинг</p>
                     </div>
                 </a>
             </li>
-            <li class="port-list-item">
-                <a class="port-link link" href="#">
-                    <div class="position-text-container">
-                        <img class="port-img img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
-                        <p class="position-text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+            <li class="example-list__item">
+                <a class="product-card" href="#">
+                    <div class="product-card__wrapper">
+                        <img class="product-card__img" src="./images/img2.9.jpg" alt="Growing Business додаток" width="370">
+                        <p class="product-card__text"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                         дозволить відвідувачу отримати
                         вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
-                    <div class="port-wrapper">
-                        <h2 class="subtitle" lang="en">Growing Business</h2>
-                        <p class="lists">Дизайн</p>
+                    <div class="product-card__container">
+                        <h2 class="product-card__title" lang="en">Growing Business</h2>
+                        <p class="product-card__point">Дизайн</p>
                     </div>
                 </a>
             </li>
